<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
            <EditText
                android:id="@+id/editTextName"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_label"
                android:maxLines="1"
                android:textColor="@color/colorTextBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
        <EditText
            android:id="@+id/editTextApellidos"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos_label"
            android:maxLines="1"
            android:textColor="@color/colorTextBlack"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
        <EditText
            android:id="@+id/editTextEdad"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edad_label"
            android:maxLines="1"
            android:textColor="@color/colorTextBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
        <EditText
            android:id="@+id/editTextAltura"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura_label"
            android:maxLines="1"
            android:textColor="@color/colorTextBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">
        <EditText
            android:id="@+id/editTextPeso"
            android:importantForAutofill="no"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_label"
            android:maxLines="1"
            android:textColor="@color/colorTextBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>